<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
        tools:text="Name" />

    <TextView
        android:id="@+id/tvUserDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        tools:text="Description" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvDescriptionInfo"
        android:layout_width="368dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserDescription" />

    <TextView
        android:id="@+id/tvRepos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/activity_profile_text_view_repos"
        android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDescriptionInfo"
        tools:text="@string/activity_profile_text_view_repos" />

    <TextView
        android:id="@+id/tvRepoCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepos"
        tools:text="RepoCount" />

    <TextView
        android:id="@+id/tvCommits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_profile_text_view_commits"
        android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
        app:layout_constraintEnd_toEndOf="@+id/barrier2"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/cvDescriptionInfo"
        tools:text="@string/activity_profile_text_view_commits" />

    <TextView
        android:id="@+id/tvCommitsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@+id/barrier2"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/tvCommits"
        tools:text="CommitsCount" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/activity_profile_text_view_stars"
        android:textAppearance="@android:style/TextAppearance.StatusBar.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDescriptionInfo"
        tools:text="@string/activity_profile_text_view_stars" />

    <TextView
        android:id="@+id/tvStarsCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:textColor="@android:color/background_dark"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStars"
        tools:text="StarsCount" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvInfoShare"
        android:layout_width="368dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCommitsCount" />

    <Button
        android:id="@+id/btnShare"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="multiply"
        android:text="@string/activity_profile_button_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvInfoShare"
        tools:text="@string/activity_profile_button_share" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tvRepos,tvRepoCount"
        tools:layout_editor_absoluteX="384dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="tvStars,tvStarsCount"
        tools:layout_editor_absoluteX="384dp" />

</android.support.constraint.ConstraintLayout>